# Envoy

./: .aikido.yaml  .gitignore  README.md  nixpacks.toml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: auth.py  gcal.py  graph.py  main.py  services.py  sessions.py  state.py  store.py  telegram.py
backend/app/agents/: analyst.py  coordinate.py  extract.py  negotiate.py  search.py
backend/app/mock/: listings.py  seller.py
backend/tests/: test_analyst.py  test_api.py  test_auth.py  test_bridge_seller_status.py  test_calendar_api.py  test_counter_loop.py  test_deal_thread.py  test_deals_api.py  test_extract.py  test_gcal.py  test_google_tokens.py  test_graph_seller.py  test_negotiate_counter.py  test_onboarding.py  test_reschedule.py  test_search.py  test_search_query_aware.py  test_seller_resume.py  test_seller_turn.py  test_services.py  test_session_user.py  test_state.py  test_store.py  test_telegram.py  test_telegram_link.py  test_vision_search.py
docs/superpowers/plans/: 2026-06-13-ai-procurement-agent.md  2026-06-13-async-negotiation-core.md  2026-06-13-google-calendar-and-reschedule.md  2026-06-13-v2-features.md  2026-06-14-onboarding-mobile-shell.md
docs/superpowers/specs/: 2026-06-13-ai-procurement-agent-design.md  2026-06-13-telegram-async-negotiation-design.md  2026-06-14-onboarding-mobile-shell-design.md
eval/: gliner_vs_gemini.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  main.tsx  useSession.ts
frontend/src/admin/: AgentView.tsx
frontend/src/i18n/: strings.ts  (+2 more)
(+20 files in other folders)
