[project]
name = "envoy-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
  "langchain-google-genai>=1.0.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "tavily-python>=0.3.0",
  "gliner>=0.2.0",
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx[test]>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
